compilers/ID/cool/regression/BASE_cgtest/old_cool/strings.cl.stderr
"./BASE_cgtest/strings.cl", line 12: parse error at or near ASSIGN
"./BASE_cgtest/strings.cl", line 13: parse error at or near ASSIGN
"./BASE_cgtest/strings.cl", line 20: parse error at or near '='
Compilation halted due to lex and parse errors
